Centralized FUNCTIONS, UNITS, and BUILTIN_VARIABLES with Map.of()